Fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ width: 80%;*/
 .name {
     margin-top: 2px;
     margin-right: 100px;
-    float: right;
+    /*float: right;*/
     text-align: center;
     text-decoration: none;
 }
